cloud-hardening-train-vtnet-sample/hardening/files/iptables
*filter
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT

# Default policies
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT

# Create chains
-N CLOUD_INPUT
-N CLOUD_OUTPUT
-N LINUX_INPUT
-N LINUX_OUTPUT

# Jump to input chains and drop in the end
-A INPUT -j CLOUD_INPUT
-A INPUT -j LINUX_INPUT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p vrrp -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j LOG --log-prefix ConnectionINPUT
-A INPUT -p udp -m udp -j LOG --log-prefix ConnectionINPUT
-A INPUT -j LOG --log-prefix "IPTABLES LOG"
-A INPUT -j REJECT --reject-with icmp-host-prohibited

# Jump to output chains and drop in the end
-A OUTPUT -j CLOUD_OUTPUT
-A OUTPUT -j LINUX_OUTPUT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p vrrp -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j LOG --log-prefix ConnectionOUTPUT
-A OUTPUT -p udp -m udp -j LOG --log-prefix ConnectionOUTPUT
-A OUTPUT -j LOG --log-prefix "IPTABLES LOG"
-A OUTPUT -j LOG --log-prefix "Dropped output by firewall: " --log-level 7
-A OUTPUT -j DROP

# Reject forward
-A FORWARD -j LOG --log-prefix "IPTABLES LOG"
-A FORWARD -j REJECT --reject-with icmp-host-prohibited


# LINUX INPUT
-A LINUX_INPUT -s 10.254.139.32/27 -p tcp -m state --state NEW -m tcp -m multiport --dports 20100:21000 -m comment --comment "Khai bao ket noi Prometheus" -j ACCEPT
-A LINUX_INPUT -s 10.240.202.163/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 20100:21000 -m comment --comment "Khai bao ket noi Prometheus" -j ACCEPT
-A LINUX_INPUT -s 10.240.226.8/29 -p tcp -m state --state NEW -m tcp -m multiport --dports 20100:21000 -m comment --comment "Khai bao ket noi Prometheus" -j ACCEPT
-A LINUX_INPUT -m iprange --src-range 10.254.139.42-10.254.139.51 -p tcp -m state --state NEW -m tcp -m multiport --dports 20100:21000 -m comment --comment "Khai bao ket noi Prometheus" -j ACCEPT
-A LINUX_INPUT -s 10.30.3.243/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GS BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 192.168.176.125/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GS BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.60.101.153/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KPI-CNTT" -j ACCEPT
-A LINUX_INPUT -s 10.60.101.150/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KPI-CNTT" -j ACCEPT
-A LINUX_INPUT -s 10.60.101.151/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KPI-CNTT" -j ACCEPT
-A LINUX_INPUT -s 10.60.101.152/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KPI-CNTT" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.226/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao May Tinh Huong" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.238/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao May Tinh Huong" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.230/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao May Tinh Huong" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.233/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao May Tinh Huong" -j ACCEPT
-A LINUX_INPUT -s 10.60.129.241/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.188/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.254/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 10.60.129.242/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 10.58.3.107/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 10.58.3.88/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 10.60.129.236/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 192.168.176.44/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppManager" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.88/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.213/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.102/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.86/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.51/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.101/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.147/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.62/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.103/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.173/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.131/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.108/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.130/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.186/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.120/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.105/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.141/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.200/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.32/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.197.111/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.240/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.109/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.124.142/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.151.91/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao TDHT" -j ACCEPT
-A LINUX_INPUT -s 10.61.151.149/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao TDHT" -j ACCEPT
-A LINUX_INPUT -s 10.61.151.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao TDHT" -j ACCEPT
-A LINUX_INPUT -s 10.61.151.60/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao TDHT" -j ACCEPT
-A LINUX_INPUT -s 192.168.252.38/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao FO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 192.168.252.237/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao FO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 192.168.252.23/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao FO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 192.168.252.161/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao FO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 192.168.252.8/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao FO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 192.168.252.56/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao FO Ha tang" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.51/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.110/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.101/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "KKhai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.102/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.128/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.133/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.186/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.111/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.35/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.25/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.98/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.238/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.55/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao KTTC" -j ACCEPT
-A LINUX_INPUT -s 10.60.132.5/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao CyberArk" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.131/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao CyberArk" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.132/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao CyberArk" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.130/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao CyberArk" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.129/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao CyberArk" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.125/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.13/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.217/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.27/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.96.218/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.122/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 192.168.176.111/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.236/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.58.4.70/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.58.4.67/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.226/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 192.168.176.42/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.126/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.123/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.29/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.28/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.30.137.84/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.26/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.203/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.33/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.205/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.235/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.36/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.12/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.219/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.32/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.220/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.204/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.30/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.218/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 192.168.182.8/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.96.219/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.35/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.202/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.227/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.31/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.34/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.221/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NocPro" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.194/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.189/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.191/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.195/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.190/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.193/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.61.129.192/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao BO ATTT" -j ACCEPT
-A LINUX_INPUT -s 10.60.129.110/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.16/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.58.15.114/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.14/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.60.129.109/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.60.129.111/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.15/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.17/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.60.129.112/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AOM" -j ACCEPT
-A LINUX_INPUT -s 10.74.225.66/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GatePro" -j ACCEPT
-A LINUX_INPUT -s 10.40.17.10/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GatePro" -j ACCEPT
-A LINUX_INPUT -s 10.58.65.175/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GatePro" -j ACCEPT
-A LINUX_INPUT -s 10.74.225.49/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GatePro" -j ACCEPT
-A LINUX_INPUT -s 10.40.17.1/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GatePro" -j ACCEPT
-A LINUX_INPUT -s 192.168.131.50/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GatePro" -j ACCEPT
-A LINUX_INPUT -s 10.58.65.174/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao GatePro" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.100/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Khai bao VIPA" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.112/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Khai bao VIPA" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.113/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Khai bao VIPA" -j ACCEPT
-A LINUX_INPUT -s 10.255.58.152/29 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,23 -m comment --comment "DCIM" -j ACCEPT
-A LINUX_INPUT -s 10.255.58.149/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,23 -m comment --comment "DCIM" -j ACCEPT
-A LINUX_INPUT -s 10.255.58.160/27 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,23 -m comment --comment "DCIM" -j ACCEPT
-A LINUX_INPUT -s 10.255.58.200/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,23 -m comment --comment "DCIM" -j ACCEPT
-A LINUX_INPUT -s 10.255.58.150/31 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,23 -m comment --comment "DCIM" -j ACCEPT
-A LINUX_INPUT -s 10.255.58.192/29 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,23 -m comment --comment "DCIM" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.17/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao Log Tap Trung" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.52/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao Log Tap Trung" -j ACCEPT
-A LINUX_INPUT -s 192.168.176.46/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppStatus" -j ACCEPT
-A LINUX_INPUT -s 192.168.176.80/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao AppStatus" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.60/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NCMS" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.192/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NCMS" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.41/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NCMS" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.42/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NCMS" -j ACCEPT
-A LINUX_INPUT -s 10.58.137.49/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NCMS" -j ACCEPT
-A LINUX_INPUT -s 10.60.7.195/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao NCMS" -j ACCEPT
-A LINUX_INPUT -s 10.60.101.139/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao IIM" -j ACCEPT
-A LINUX_INPUT -s 10.60.101.140/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao IIM" -j ACCEPT
-A LINUX_INPUT -s 10.58.15.114/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao IIM" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.165/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao Tac dong Tap trung" -j ACCEPT
-A LINUX_INPUT -s 10.60.97.166/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao Tac dong Tap trung" -j ACCEPT
-A LINUX_INPUT -s 10.60.5.133/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao Tool TD" -j ACCEPT
-A LINUX_INPUT -s 10.60.100.73/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "Khai bao Tool TD" -j ACCEPT


# LINUX OUTPUT
-A LINUX_OUTPUT -d 10.240.226.8/29 -p tcp -m state --state NEW -m tcp -m multiport --dports 9899,8081,8379 -m comment --comment Khai-bao-ket-noi-prometheus -j ACCEPT
-A LINUX_OUTPUT -d 10.240.226.32/27 -p tcp -m state --state NEW -m tcp -m multiport --dports 9899,8081,8379 -m comment --comment Khai-bao-ket-noi-prometheus -j ACCEPT
-A LINUX_OUTPUT -d 10.255.58.203/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443 -m comment --comment Khai-bao-ket-noi-dcim-for-ncms -j ACCEPT
-A LINUX_OUTPUT -d 10.60.129.132/32 -p tcp -m state --state NEW -m tcp --dport 80 -m comment --comment "VTNET Yum Repos" -j ACCEPT
-A LINUX_OUTPUT -d 10.240.201.50/32 -p tcp -m state --state NEW -m tcp --dport 8081 -m comment --comment "VTNET Yum Repos" -j ACCEPT
-A LINUX_OUTPUT -d 10.60.129.132/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8890,8891 -m comment --comment "VTNET Docker Repos" -j ACCEPT
-A LINUX_OUTPUT -d 10.240.201.50/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8890,8891 -m comment --comment "VTNET Docker Repos" -j ACCEPT
-A LINUX_OUTPUT -d 192.168.181.50/32 -p udp -m state --state NEW -m udp --dport 123 -m comment --comment "Update time" -j ACCEPT
-A LINUX_OUTPUT -d 10.60.33.7/32 -p tcp -m state --state NEW -m tcp --dport 8080 -m comment --comment "Check IO" -j ACCEPT
-A LINUX_OUTPUT -d 10.30.160.41/32 -p udp -m state --state NEW -m udp --dport 514 -m comment --comment "Khai bao SIRC" -j ACCEPT
-A LINUX_OUTPUT -d 10.30.160.41/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,514,4505,4506,5044,6379,9092,9080:9100 -m comment --comment "Khai bao SIRC" -j ACCEPT
-A LINUX_OUTPUT -d 10.30.160.44/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,514,4505,4506,5044,6379,9092,9080:9100 -m comment --comment "Khai bao SIRC" -j ACCEPT
-A LINUX_OUTPUT -d 10.30.160.45/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,514,4505,4506,5044,6379,9092,9080:9100 -m comment --comment "Khai bao SIRC" -j ACCEPT
-A LINUX_OUTPUT -d 10.30.160.46/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,514,4505,4506,5044,6379,9092,9080:9100 -m comment --comment "Khai bao SIRC" -j ACCEPT



# CLOUD INPUT

### Internal vCloud
-A CLOUD_INPUT -s 172.17.0.0/24 -m comment --comment "Docker Internal Network" -j ACCEPT
-A CLOUD_INPUT -s 172.18.0.0/24 -m comment --comment "Docker Internal Network" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.2/32 -m comment --comment "Internal Cloud Control to HAProxy Node" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.3/32 -m comment --comment "Internal Cloud Control to HAProxy Node" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.4/32 -m comment --comment "Internal Cloud Control to HAProxy Node" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/22 -p udp -m state --state NEW -m udp --dport 123 -m comment --comment "Internal Cloud from Cloud Nodes to Cloud Chrony server" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.2/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.2/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/22 -p udp -m udp --dport 53 -m comment --comment "From Cloud to Local DNS Server" -j ACCEPT

### vCloud Monitor
#prometheus_node_exporter_port: "9100"
#prometheus_mysqld_exporter_port: "9104"
#prometheus_haproxy_exporter_port: "9101"
#prometheus_memcached_exporter_port: "9150"
#prometheus_ceph_mgr_exporter_port: "9283"
#prometheus_cadvisor_port: "18080"
#prometheus_ceph_exporter_port: "9128"
#prometheus_rabbitmq_exporter_port: "9419"
#prometheus_process_exporter_port: "9222"
#prometheus_elasticsearch_exporter_port: "9108"
#prometheus_libvirt_exporter_port: "9177"
#prometheus_container_status_exporter_port: "9800"
#old_openstack_exporter_port: "9183"
#new_openstack_exporter_port: "9198"
#snmp_exporter_port: "9116-9119"

### TODO: Sua lai source ip 10.254.203.2/3/4 sau khi co quy hoach cho node Prometheus moi
-A CLOUD_INPUT -s 10.254.203.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9100,9104,9101,9150,9283,18080,9128,9419,9222,9108,9177,9800,9183,9198 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9100,9104,9101,9150,9283,18080,9128,9419,9222,9108,9177,9800,9183,9198 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9100,9104,9101,9150,9283,18080,9128,9419,9222,9108,9177,9800,9183,9198 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8600,8379 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8600,8379 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8600,8379 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9116:9119 -m comment --comment "From Prometheus Server to SNMP Exporter VIP and From HAProxy to SNMP Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9116:9119 -m comment --comment "From Prometheus Server to SNMP Exporter VIP and From HAProxy to SNMP Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9116:9119 -m comment --comment "From Prometheus Server to SNMP Exporter VIP and From HAProxy to SNMP Exporters" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8060,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From Openstack exporter to Cloud API" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8060,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From Openstack exporter to Cloud API" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8060,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From Openstack exporter to Cloud API" -j ACCEPT

### vCloud Control Plane
-A CLOUD_INPUT -s 10.8.0.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9200,9300 -m comment --comment "Elasticsearch cluster" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9200,9300 -m comment --comment "Elasticsearch cluster" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9200,9300 -m comment --comment "Elasticsearch cluster" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 3306 -m comment --comment "Internal Cloud to database" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 3306 -m comment --comment "Internal Cloud to database" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 3306 -m comment --comment "Internal Cloud to database" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 3306 -m comment --comment "Internal Cloud to database" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 5671,5672,15671,15672,25672 -m comment --comment "Internal Cloud to rabbitmq" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m multiport --dports 5671,5672,15671,15672,25672 -m comment --comment "Internal Cloud to rabbitmq" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m multiport --dports 5671,5672,15671,15672,25672 -m comment --comment "Internal Cloud to rabbitmq" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m multiport --dports 5671,5672,15671,15672,25672 -m comment --comment "Internal Cloud to rabbitmq" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.2/32 -p tcp -m state --state NEW -m tcp --dport 4567 -m comment --comment "Mariadb wsrep port" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.3/32 -p tcp -m state --state NEW -m tcp --dport 4567 -m comment --comment "Mariadb wsrep port" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.4/32 -p tcp -m state --state NEW -m tcp --dport 4567 -m comment --comment "Mariadb wsrep port" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT
-A CLOUD_INPUT -s 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT

-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 11211 -m comment --comment "From Keystone and Horizon Cloud to Memcached nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9300 -m comment --comment "Communication between Elasticsearch nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 2380 -m comment --comment "Etcd peer between Etcd nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.8.0.2/32 -p tcp -m state --state NEW -m tcp --dport 8375 -m comment --comment "From Portainer to Docker Engines" -j ACCEPT


### Ceph SDS Connection
-A CLOUD_INPUT -s 10.8.0.32/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "From Ceph Deployment node to Target nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.254.205.32/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "From Ceph Deployment node to Target nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.254.195.3/32 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "From Ceph Deployment node to Target nodes" -j ACCEPT
-A CLOUD_INPUT -s 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_INPUT -s 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_INPUT -s 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Compute Nodes and Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_INPUT -s 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Compute Nodes and Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_INPUT -s 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Compute Nodes to Ceph OSDs" -j ACCEPT
-A CLOUD_INPUT -s 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Compute Nodes to Ceph OSDs" -j ACCEPT
-A CLOUD_INPUT -s 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Ceph OSDs to Ceph OSDs" -j ACCEPT
-A CLOUD_INPUT -s 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Ceph OSDs to Ceph OSDs" -j ACCEPT

### 3rd System
### TODO: Update source IPs
-A CLOUD_INPUT -s 10.30.25.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,8000:10000 -m comment --comment "From Checkpoint VPN to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.240.178.0/28 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "From NIAM to Cloud servers" -j ACCEPT
-A CLOUD_INPUT -s 10.61.123.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,8000:10000 -m comment --comment "From Office Network to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 192.168.252.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,80,443,8000:10000 -m comment --comment "From FO Network to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.240.202.224/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5000,8989,9090,9091,8000 -m comment --comment "From Faythe autohealing to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.240.202.223/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5000,8989,9090,9091,8000 -m comment --comment "From Faythe autohealing to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.240.202.228/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5000,8989,9090,9091,8000 -m comment --comment "From Faythe autohealing to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.240.202.165/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8060,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From vPortal to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.60.93.152/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.60.93.153/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.60.93.154/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_INPUT -s 10.60.93.156/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_INPUT -p tcp -m state --state NEW -m tcp --dport 9200 -m comment --comment "From other system to Cloud Elasticsearch" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.1/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9090 -m comment --comment "From Grafana to Prometheus server" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9090 -m comment --comment "From Grafana to Prometheus server" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9090 -m comment --comment "From Grafana to Prometheus server" -j ACCEPT
-A CLOUD_INPUT -s 10.254.203.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9090 -m comment --comment "From Grafana to Prometheus server" -j ACCEPT

### From portal to OpenStack API
-A CLOUD_INPUT -m iprange --src-range 10.254.139.1-10.254.139.23 -p tcp -m state --state NEW -m tcp -m multiport --dports 9311,9876,9696,8004,8780,8776,8989,6385,5050,8000,8774,9511,5000,9292 -j ACCEPT


# CLOUD OUTPUT

### Internal vCloud
-A CLOUD_OUTPUT -d 10.8.0.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9200,9300 -m comment --comment "Elasticsearch cluster" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9200,9300 -m comment --comment "Elasticsearch cluster" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.4/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9200,9300 -m comment --comment "Elasticsearch cluster" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.2/32 -p udp -m udp --dport 53 -m comment --comment "From Cloud to Local DNS Server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.3/32 -p udp -m udp --dport 53 -m comment --comment "From Cloud to Local DNS Server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.4/32 -p udp -m udp --dport 53 -m comment --comment "From Cloud to Local DNS Server" -j ACCEPT
-A CLOUD_OUTPUT -d 172.17.0.0/24 -m comment --comment "Docker Internal Network" -j ACCEPT
-A CLOUD_OUTPUT -d 172.18.0.0/24 -m comment --comment "Docker Internal Network" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.1/32 -m comment --comment "Internal Cloud from HAProxy Node to Cloud Control Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.2/32 -m comment --comment "Internal Cloud from HAProxy Node to Cloud Control Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.3/32 -m comment --comment "Internal Cloud from HAProxy Node to Cloud Control Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.4/32 -m comment --comment "Internal Cloud from HAProxy Node to Cloud Control Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p udp -m state --state NEW -m udp --dport 123 -m comment --comment "Internal Cloud from Cloud Nodes to Cloud Chrony server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p udp -m state --state NEW -m udp --dport 123 -m comment --comment "Internal Cloud from Cloud Nodes to Cloud Chrony server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p udp -m state --state NEW -m udp --dport 123 -m comment --comment "Internal Cloud from Cloud Nodes to Cloud Chrony server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p udp -m state --state NEW -m udp --dport 123 -m comment --comment "Internal Cloud from Cloud Nodes to Cloud Chrony server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.4.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_OUTPUT -s 10.254.203.2/32 -d 10.254.203.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_OUTPUT -s 10.254.203.2/32 -d 10.254.205.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT
-A CLOUD_OUTPUT -s 10.8.0.2/32 -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Cloud AppManager" -j ACCEPT



### vCloud Monitor
#prometheus_node_exporter_port: "9100"
#prometheus_mysqld_exporter_port: "9104"
#prometheus_haproxy_exporter_port: "9101"
#prometheus_memcached_exporter_port: "9150"
#prometheus_ceph_mgr_exporter_port: "9283"
#prometheus_cadvisor_port: "18080"
#prometheus_ceph_exporter_port: "9128"
#prometheus_rabbitmq_exporter_port: "9419"
#prometheus_process_exporter_port: "9222"
#prometheus_elasticsearch_exporter_port: "9108"
#prometheus_libvirt_exporter_port: "9177"
#prometheus_container_status_exporter_port: "9800"
#old_openstack_exporter_port: "9183"
#new_openstack_exporter_port: "9198"

-A CLOUD_OUTPUT -d 10.254.203.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 9100,9104,9101,9150,9283,18080,9128,9419,9222,9108,9177,9800,9183,9198 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 9100,9104,9101,9150,9283,18080,9128,9419,9222,9108,9177,9800,9183,9198 -m comment --comment "From Prometheus Server to Exporters" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.203.1/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8060,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From Openstack exporter to Cloud API" -j ACCEPT


### vCloud Control Plane
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8022 -m comment --comment "Nova SSH between Compute Nodes for key synchronization and data migration" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 5900:5999 -m comment --comment "Compute ports for access to virtual machine consoles" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 49152:49261 -m comment --comment "Nova Live Migration between Compute Nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8060 -m comment --comment "Nova VNC Compute ports for access virtual machine over VNC" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 16509 -m comment --comment "From Internal Cloud to Libvirtd" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p udp --dport 4789 -m comment --comment "Nova Tunneling between Compute Nodes for self service networks" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9696 -m comment --comment "From Internal Cloud to Neutron API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9876 -m comment --comment "From Internal Cloud to Octavia API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8989 -m comment --comment "From Internal Cloud to Mistral API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8780 -m comment --comment "From Internal Cloud to Nova Placement API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8774 -m comment --comment "From Internal Cloud to Nova API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8775 -m comment --comment "From Internal Cloud to Nova Metadata API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9511 -m comment --comment "From Internal Cloud to Magnum API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m multiport --dports 8004,8000 -m comment --comment "From Internal Cloud to Heat and Cloudformation API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m multiport --dports 5000,35357 -m comment --comment "From Internal Cloud to Keystone API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m multiport --dports 5050,6385 -m comment --comment "From Internal Cloud to Ironic API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9292 -m comment --comment "From Internal Cloud to Glance API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 8776 -m comment --comment "From Internal Cloud to Cinder API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.1.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.2.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.3.0/24 -p tcp -m state --state NEW -m tcp --dport 9311 -m comment --comment "From Internal Cloud to Barbican API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -m comment --comment "From Internal Cloud to ElasticSearch API" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 3306 -m comment --comment "From Internal Cloud to MariaDB" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m multiport --dports 5671,5672,15671,15672,25672 -m comment --comment "From Internal Cloud to RabbitMQ" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 11211 -m comment --comment "From Keystone and Horizon Cloud to Memcached nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 9300 -m comment --comment "Communication between Elasticsearch nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.0/24 -p tcp -m state --state NEW -m tcp --dport 3030 -m comment --comment "Etcd peer between Etcd nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.11.0.0/16 -p udp -m udp --dport 5555 -m comment --comment "From Octavia Amphora virtual machine to Octavia Health Manager" -j ACCEPT


### TODO: add rule cho Octavia "From Octavia Amphora virtual machine to Octavia Health Manager"
-A CLOUD_OUTPUT -d 10.8.0.1/32 -p tcp -m state --state NEW -m tcp --dport 8375 -m comment --comment "From Portainer to Docker Engines" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.2/32 -p tcp -m state --state NEW -m tcp --dport 8375 -m comment --comment "From Portainer to Docker Engines" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.3/32 -p tcp -m state --state NEW -m tcp --dport 8375 -m comment --comment "From Portainer to Docker Engines" -j ACCEPT
-A CLOUD_OUTPUT -d 10.8.0.4/32 -p tcp -m state --state NEW -m tcp --dport 8375 -m comment --comment "From Portainer to Docker Engines" -j ACCEPT

### Ceph SDS Connection: 
-A CLOUD_OUTPUT -s 10.8.0.32/32 -d 10.8.0.0/22 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "From Ceph Deployment node to Target nodes" -j ACCEPT
-A CLOUD_OUTPUT -s 10.254.205.32/32 -d 10.254.205.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "From Ceph Deployment node to Target nodes" -j ACCEPT
-A CLOUD_OUTPUT -s 10.254.205.32/32 -d 10.254.206.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "From Ceph Deployment node to Target nodes" -j ACCEPT
-A CLOUD_OUTPUT -s 10.8.0.2/32 -d 10.8.0.0/22 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "From Ceph Deployment node to Target nodes" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Compute Nodes and Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 3300,6789 -m comment --comment "From Compute Nodes and Ceph OSDs to Ceph Mon" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Ceph OSDs to Ceph OSDs" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Ceph OSDs to Ceph OSDs" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.205.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Compute Nodes to Ceph OSDs" -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.206.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 6800:7300 -m comment --comment "From Compute Nodes to Ceph OSDs" -j ACCEPT



### 3rd System
-A CLOUD_OUTPUT -d 10.30.25.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,8000:10000 -m comment --comment "From Checkpoint VPN to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.178.0/28 -p tcp -m state --state NEW -m tcp -m multiport --dports 22 -m comment --comment "From NIAM to Cloud servers" -j ACCEPT
-A CLOUD_OUTPUT -d 10.61.123.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,8000:10000 -m comment --comment "From Office Network to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 192.168.252.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,80,443,8000:10000 -m comment --comment "From FO Network to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.202.224/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5000,8989,9090,9091,8000 -m comment --comment "From Faythe autohealing to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.202.223/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5000,8989,9090,9091,8000 -m comment --comment "From Faythe autohealing to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.202.228/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5000,8989,9090,9091,8000 -m comment --comment "From Faythe autohealing to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.202.165/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8060,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From vPortal to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.60.93.152/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.60.93.153/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.60.93.154/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.60.93.156/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 6385,5050,8000,8774,9511,5000,9292,9311,9876,9696,8004,8780,8776,8989 -m comment --comment "From V2V Server to Cloud" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.226.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9093 -m comment --comment "From Cloud to Alert Manager UDCNTT" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.226.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 9093 -m comment --comment "From Cloud to Alert Manager UDCNTT" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.201.74/32 -p tcp -m state --state NEW -m tcp --dport 53 -m comment --comment "From Cloud to DNS Server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.201.74/32 -p udp -m udp --dport 53 -m comment --comment "From Cloud to DNS Server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.203.2/32 -p tcp -m state --state NEW -m tcp --dport 8180 -m comment --comment "From Cloud to Gitlab Cloud Server" -j ACCEPT
-A CLOUD_OUTPUT -d 10.240.201.49/32 -p tcp -m state --state NEW -m tcp --dport 9011 -m comment --comment "From Mistral to Mail proxy" -j ACCEPT

### Rabbit portal
-A CLOUD_OUTPUT -d 10.254.139.1/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5672 -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.139.2/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5672 -j ACCEPT
-A CLOUD_OUTPUT -d 10.254.139.3/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 5672 -j ACCEPT

COMMIT
